Edit README.md to provide detailed steps for creating and running a GitHub Codespace and running Java code